--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "coveralls": "^2.11.2",
     "istanbul": "^0.4.5",
     "mocha": "^2.1.0",
-    "sinon": "^1.12.2"
+    "sinon": "^1.12.2",
+    "streamx": "^2.10.3"
   },
   "bugs": {
     "url": "https://github.com/chm-diederichs/elementsd-rpc/issues"
