--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "url": "https://github.com/chm-diederichs/elementsd-rpc"
   },
   "license": "MIT",
-  "main": "lib/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "node_modules/.bin/mocha test -R spec",
     "coverage": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- --recursive"
@@ -57,6 +57,6 @@
   },
   "homepage": "https://github.com/chm-diederichs/elementsd-rpc",
   "dependencies": {
-    "axios": "^0.21.1"
+    "undici": "^4.13.0"
   }
 }
